# timecard-system

./: .gitignore  README.md  next.config.ts  package-lock.json  package.json  test-prisma.mjs
prisma/: schema.prisma
public/: manifest.json  sw.js
scripts/: assign-departments.ts  ssh-tunnel.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/actions/: admin.ts  attendance.ts  auth.ts  break.ts  department.ts  kiosk.ts  profile.ts  workrule.ts
src/app/: layout.tsx  page.tsx
src/app/(admin)/: layout.tsx
src/app/(admin)/admin/attendance/: loading.tsx  page.tsx
src/app/(admin)/admin/departments/: CreateDepartmentForm.tsx  DeleteDepartmentButton.tsx  RenameDepartmentForm.tsx  loading.tsx  page.tsx
src/app/(admin)/admin/settings/: page.tsx
src/app/(admin)/admin/users/: page.tsx  (+1 more)
src/app/(auth)/login/: page.tsx
src/app/(dashboard)/: layout.tsx
src/app/(dashboard)/dashboard/: error.tsx  loading.tsx  page.tsx
src/app/(kiosk)/: layout.tsx
src/app/(kiosk)/kiosk/: page.tsx
src/app/clock/: ClockPageClient.tsx  page.tsx
src/components/: AssignDepartmentSelect.tsx  AttendanceAlerts.tsx  AttendanceTable.tsx  ClockButton.tsx  DeleteUserButton.tsx  EditAttendanceForm.tsx  LocationDisplay.tsx  LoginForm.tsx  Navbar.tsx  ServiceWorkerRegistration.tsx  StatusToggle.tsx  UserActionsRow.tsx  UserFilter.tsx  WorkRuleForm.tsx
src/lib/: auth.ts  cached-auth.ts  db.ts  migrate-maido-parallel.ts  migrate-maido.ts  require-admin.ts  seed.ts  time-utils.ts
src/types/: index.ts
(+14 files in other folders)
